@@ -1,11 +1,11 @@
 # 跨公网同步实施文档
 
 ## 背景
-Redis的数据必须跨公网进行传输时，内网与公网进行连接传输大量数据，公网的不稳定性,不安全性在一定程度上决定了, 使用 redis 直连进行同步是一项不推荐的方案.
+Redis的数据必须跨公网进行传输时，内网与公网进行连接传输大量数据，公网的不稳定性，不安全性在一定程度上决定了，使用 redis 直连进行同步是一项不推荐的方案。
 
-通过搭建专线，可以解决上述问题, 但是一方面, 专线的费用昂贵; 另一方面, 专线这种解决方案的可拓展性很差, 每增加一个站点, 就需要专门开通一条线路。
+通过搭建专线，可以解决上述问题，但是一方面，专线的费用昂贵; 另一方面，专线这种解决方案的可拓展性很差，每增加一个站点，就需要专门开通一条线路。
 
-基于此, 我们决定使用TCP Proxy的方案来解决Redis 数据跨公网同步的问题. 具体项目代码在 xpipe 的 proxy 文件夹下面, XPipe Proxy 集中了加密, 压缩的功能, 同时, 我们提供了对TCP算法的优化方案, 可以使得公网传输能够支持更大的带宽.
+基于此，我们决定使用TCP Proxy的方案来解决Redis 数据跨公网同步的问题。具体项目代码在 xpipe 的 proxy 文件夹下面，XPipe Proxy 集中了加密，压缩的功能，同时，我们提供了对TCP算法的优化方案, 可以使得公网传输能够支持更大的带宽。
 
 Proxy 连接关系如下图:
 ![](https://raw.github.com/ctripcorp/x-pipe/master/doc/image/proxy.png)
@@ -22,7 +22,7 @@ XPipe 的组件中, 按照每个数据中心/站点 划分, 需求关系如下:
 ![](https://raw.github.com/ctripcorp/x-pipe/master/doc/image/cross-pub.png)
 
 ## 实施步骤
-> 假设前提是用户已经将自己的XPipe系统基本搭建起来, 或者用户已经搭建成功内网的XP ipe, 需要增加跨公网传输的功能, 请参照下面步骤搭建
+> 假设前提是用户已经将自己的XPipe系统基本搭建起来, 或者用户已经搭建成功内网的XPipe, 需要增加跨公网传输的功能, 请参照下面步骤搭建
 > 
 
 ### 关于配置项
@@ -77,7 +77,7 @@ proxy.traffic.report.interval.milli = 5000  xpipe 向CAT打的监控埋点, 可�
 rpm -ivh XXX  
 rpm -qa | grep kernel
 sudo egrep ^menuentry /etc/grub2.cfg | cut -f 2 -d \'
-sudo grub2-set-default 0 
+sudo grub2-set-default 0  # 这里0需根据上个命令输出结果而定
 sudo shutdown -r now
 uname -r
 
@@ -90,15 +90,14 @@ sudo sysctl -p
 ### Java 启动TCP在80端口
 
 ```
-setcap 'cap_net_bind_service=+ep' /usr/java/latest/bin/java
- 
-touch /etc/ld.so.conf.d/java.conf
- 
-sed -i '1,$d' /etc/ld.so.conf.d/java.conf
- 
-echo '/usr/java/latest/jre/lib/amd64/jli' >> /etc/ld.so.conf.d/java.conf
- 
-ldconfig | grep libjli
+setcap 'cap_net_bind_service=+ep' $JAVE_HOME/bin/java
+```
+
+### 初始化脚本
+
+redis/redis-proxy/src/main/test/resources下包含cert和env_set文件夹，将2个文件夹复制到Proxy机器上，在完成内核手动升级后，执行如下命令完成机器初始化。
+```
+sudo bash init.sh && sudo bash refresh.sh
 ```
 
 ### 数据库插入信息
@@ -141,8 +140,73 @@ body:
 `console` 是为了 console 跨公网对 redis 做健康检测时, 需要经过 proxy 转发
 
 
-### 结束
+### 小结
 到此, 用户可以使用 proxy 提供的跨公网传输的功能, 携程目前使用 proxy 进行从上海到德国的数据传输, 稳定性和安全性都经过生产环境的检验
 
-# Proxy 整体架构设计
-> To be continued..
+# Proxy 整体设计
+![](image/arch.png)
+
+proxy 会在80和443分别启动服务，80端口服务内网连接，443端口服务外网连接。
+
+## 核心概念
+
+### Tunnel
+网络隧道，隧道有入口和出口，分别映射到内网和外网，所以 Tunnel 的作用就是将 内网/外网 流量转到 外网/内网。
+
+### Session
+一段连接回话，具有生命周期，包含Init、Established、Closing和Closed。
+
+### ProxyProtocol
+为了保证 proxy 本身是无状态的，使用 proxy 的 client 需要将整条链路上经过的所有 proxy 与 server 的 IP 和端口作为一条信息发送给连接的 proxy，此条消息即 proxy 协议中 route 信息。
+
+数据在公网传输时，proxy 需要进行 ssl 加密，使用443端口，在 proxy 协议中 URI 为 PROXYTLS:后接IP与端口，即 PROXYTLS:IP:443；
+
+而在内网传输时，不必进行 ssl 加密，使用80端口，在 proxy 协议中 URI 为 TCP:后接IP与端口，即 TCP:IP:80。
+
+URI构成格式如下所示：
+
+![](image/route.png)
+
+# Proxy Client
+redis-proxy-client 客户端提供了低侵入 proxy 接入方式，用户注册需要代理的终端，运行时客户端自动拦截建连请求，完成 proxy 通信协议，实现用户数据传输。
+
+## 使用方式
+
+### 引入依赖
+
+```
+<!-- 最低版本1.2.4 -->
+<dependency>
+    <groupId>com.ctrip.framework.xpipe.redis</groupId>
+    <artifactId>redis-proxy-client</artifactId>
+    <version>${project.version}</version>
+</dependency>
+```
+
+### 注册代理终端
+注册需要代理的 (ip, port) 及其使用的 proxy 信息即可。
+```
+ProxyRegistry.registerProxy("10.15.1.0", 8080, "PROXY ROUTE PROXYTCP://10.26.0.1:80 PROXYTLS://10.15.1.1:443 TCP")
+
+```
+运行时，keeper 会自动建立如下链路，proxy 对用户完全透明。
+![](image/protocol.png)
+
+### 取消代理终端
+```
+ProxyRegistry.unegisterProxy("10.15.1.0", 8080)
+
+```
+
+## 实现原理
+redis-proxy-client 使用 JavaAgent 和 ASM 字节码技术，对JVM加载的 Socket.class 和 SocketChannelImpl.class 二进制文件，利用 ASM 动态修改对应的 class 文件，代理实现 proxy 协议。
+
+### Agent启动
+1. 使用 Tomcat 容器的启动 war 包的应用，通过 ServletContextListener 实现 Agent 的自动启动；
+2. 使用 Spring Boot 启动 jar 包的应用，通过 EnableAutoConfiguration 实现 Agent 的自动启动;
+3. 非以上2种方式，可以主动执行 ProxyAgentTool.startUp() 启动 Agent。
+
+对于 jdk >= 9 的应用，需添加如下 VM 参数：
+```
+-Djdk.attach.allowAttachSelf=true
+```
